--- a/manifest.json
+++ b/manifest.json
@@ -7,24 +7,26 @@
   
   "background": {
     "scripts": ["background.js",  "src/thirdParty/jquery-3.1.1.min.js", 
-    "src/thirdParty/jquery-ui.js", "src/thirdParty/webgazer.js"],
+    "src/thirdParty/jquery-ui.js"],
     "persistent": false
   },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  // "web_accessible_resources": [
-  //   "src/thirdParty/jquery-3.1.1.min.js", 
-  //   "src/thirdParty/jquery-ui.js", "src/thirdParty/webgazer.js"
-  // ],
+ 
    "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
       "css": ["controls.css"],
-      "js": ["src/thirdParty/jquery-3.1.1.min.js", "src/thirdParty/jquery-ui.js"]
+      "js": ["src/thirdParty/jquery-3.1.1.min.js", "src/thirdParty/jquery-ui.js",
+        "src/thirdParty/webgazer.js"]
     }
   ],
+   "web_accessible_resources": [
+        "controls.css"
+    ],
+
     
 
   "permissions": [
