[eyeGalaw | Experiment]: UI elements' CSS can already be changed: change opacity already working. Problem: cannot click inside the webpage;

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,7 @@
     
 
   "permissions": [
+  "activeTab",
     "tabs", "http://*/*", "https://*/*"
     // "tabs", "http://*/*", "https://*/*"
     // "https://ajax.googleapis.com/"
