--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,7 @@
     
 
   "permissions": [
+  "storage",
   "activeTab",
     "tabs", "http://*/*", "https://*/*"
     // "tabs", "http://*/*", "https://*/*"
