--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,8 @@
         "src/thirdParty/webgazer.js"]
     }
   ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+
    "web_accessible_resources": [
         "controls.css"
     ],
