[eyeGalaw] Kahit ireload ang page webgazer still runs. Learned about backgraound pages

--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,7 @@
 
   "permissions": [
   "storage",
+  "webNavigation",
   "activeTab",
     "tabs", "http://*/*", "https://*/*"
     // "tabs", "http://*/*", "https://*/*"
