--- a/manifest.json
+++ b/manifest.json
@@ -6,19 +6,19 @@
   "version": "1.0",
   
   "background": {
-    "scripts": ["background.js",  "src/thirdParty/jquery-3.1.1.min.js", 
+    "scripts": ["src/js/background.js",  "src/thirdParty/jquery-3.1.1.min.js", 
     "src/thirdParty/jquery-ui.js"],
     "persistent": false
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "src/img/icon.png",
     "default_popup": "popup.html"
   },
  
    "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "css": ["controls.css"],
+      "css": ["src/css/controls.css"],
       "js": ["src/thirdParty/jquery-3.1.1.min.js", "src/thirdParty/jquery-ui.js",
         "src/thirdParty/webgazer.js"]
     }
@@ -26,7 +26,7 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
 
    "web_accessible_resources": [
-        "controls.css"
+        "src/css/controls.css"
     ],
 
     
